--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,14 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
-  box-sizing: border-box;
+  @apply p-0 m-0 box-border;
+}
+
+html {
+}
+body {
+  @apply font-base text-skin-base px-4 sm:mx-auto;
+  max-width: 1200px;
 }
