--- a/components/Filters/filters.module.scss
+++ b/components/Filters/filters.module.scss
@@ -4,7 +4,7 @@
     @apply py-4 border-b border-skin-base;
   }
   .head {
-    @apply py-3;
+    @apply py-3 text-lg;
   }
   .filter {
     @apply text-skin-light;
