--- a/components/Results/result.module.scss
+++ b/components/Results/result.module.scss
@@ -1,15 +1,28 @@
 .card {
+  @apply mb-10 bg-skin-light flex items-center;
   transition: all 0.5s;
   &:hover {
     @apply bg-skin-base transform -translate-y-1;
     box-shadow: 0 8px 50px 0 rgba(44, 43, 88, 0.08);
-    .register {
+    button.cta {
       @apply text-white bg-skin-highlight;
     }
   }
+  .content {
+    @apply flex-grow flex flex-col px-5 my-9 border-r border-skin-base;
+  }
+  h1 {
+    @apply font-bold text-2xl mb-1;
+  }
+  h2 {
+    @apply text-skin-light mb-2;
+  }
+  h3 {
+    @apply text-xs text-skin-extra-light mb-4;
+  }
 }
 
-.register {
+button.cta {
   transition: all 0.25s;
   @apply flex items-center px-4 py-2 border-2 border-skin-highlight text-skin-highlight self-start font-medium text-sm rounded-sm;
 }
