--- a/components/Results/result.module.scss
+++ b/components/Results/result.module.scss
@@ -1,5 +1,5 @@
 .card {
-  @apply mb-10 bg-skin-light flex items-center;
+  @apply mb-4 md:mb-10 bg-skin-light flex items-start md:items-center;
   transition: all 0.5s;
   &:hover {
     @apply bg-skin-base transform -translate-y-1;
@@ -12,7 +12,12 @@
     @apply flex-grow flex flex-col;
   }
   h1 {
-    @apply font-bold text-2xl mb-1;
+    @apply font-bold text-lg md:text-2xl mb-1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    -webkit-box-orient: vertical;
   }
   h2 {
     @apply text-skin-light mb-2;
