--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,6 @@ html {
   @apply w-screen overflow-x-hidden;
 }
 body {
-  @apply w-screen font-base text-skin-base px-4 sm:mx-auto cursor-default overflow-x-hidden;
+  @apply w-screen min-h-screen font-base text-skin-base px-4 sm:mx-auto cursor-default overflow-x-hidden;
   max-width: 1200px;
 }
