--- a/components/Results/ConnectedAccountResult/connectedAccountResult.module.scss
+++ b/components/Results/ConnectedAccountResult/connectedAccountResult.module.scss
@@ -1,9 +1,11 @@
 .menu {
-  @apply w-52 absolute top-full right-1/2 transform translate-x-1/2 translate-y-5 z-50 bg-skin-base flex flex-col text-sm font-medium;
-  box-shadow: 0px 15px 33px rgba(44, 43, 88, 0.13);
-  border: 0.5px solid #eaebee;
+  @apply w-full md:w-52 md:absolute top-full right-5 md:transform md:translate-x-1/2 z-50 bg-skin-base flex flex-col text-sm font-medium;
+  @screen md {
+    box-shadow: 0px 15px 33px rgba(44, 43, 88, 0.13);
+    border: 0.5px solid #eaebee;
+  }
   &::after {
-    @apply w-5 h-5 absolute bottom-full left-1/2 transform -translate-x-1/2 translate-y-1/2 rotate-45 bg-skin-base;
+    @apply hidden md:block w-5 h-5 absolute bottom-full left-1/2 transform -translate-x-1/2 translate-y-1/2 rotate-45 bg-skin-base;
     content: "";
     box-shadow: 0px 15px 33px rgba(44, 43, 88, 0.13);
     border-top: 0.5px solid #eaebee;
