--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,10 +12,11 @@ html {
   @apply w-screen overflow-x-hidden;
 }
 body {
-  @apply w-screen min-h-screen font-base text-skin-base px-4 sm:mx-auto cursor-default overflow-x-hidden;
-  max-width: 1200px;
+  @apply w-screen min-h-screen font-base text-skin-base sm:mx-auto cursor-default overflow-x-hidden;
 }
-
+#__next {
+  @apply min-h-screen flex flex-col;
+}
 input[type="range"] {
   @apply my-2 bg-skin-base border-none shadow-none;
   -webkit-appearennce: none;
