--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -1,13 +1,3 @@
-.currentPage {
-  @apply font-semibold text-skin-highlight relative;
-
-  @scree md {
-    @apply w-full bottom-0 left-0 absolute bg-skin-highlight;
-    content: "";
-    height: 2px;
-  }
-}
-
 .menuBtn {
   @apply w-4 h-3 relative mb-2 md:hidden;
   .line {
@@ -27,4 +17,8 @@
       }
     }
   }
+}
+
+.subpages {
+  box-shadow: 0px 3000px 0 3000px rgba(64, 68, 78, 0.7);
 }
