--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -20,7 +20,9 @@
 }
 
 .subpages {
-  box-shadow: 0px 3000px 0 3000px rgba(64, 68, 78, 0.7);
+  @screen md {
+    box-shadow: 0px 3000px 0 3000px rgba(64, 68, 78, 0.7);
+  }
   .subpage {
     &:hover {
       .icon {
